<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="human_first">You go first.</string>
    <string name="human_turn">It\'s your turn (X)</string>
    <string name="android_turn">It\'s Android\'s turn.</string>
    <string name="tie">It\'s a tie!</string>
    <string name="human_won">You won!</string>
    <string name="android_won">Android won!</string>
    <string name="start_new_game">Start Game</string>
    <string name="level">Level</string>
    <string name="level_1">EASY</string>
    <string name="level_2">MEDIUM</string>
    <string name="level_3">HARD</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="loss">Loss</string>
    <string name="clear_history">Clear History</string>
    <string name="setting_title">Settings</string>
    <string name="setting_done">Done</string>
    <string name="setting_dark_mode">Dark Mode</string>
    <string name="setting_android_first">Android First</string>
    <string name="setting_sound_effect">Sound Effect</string>
    <string name="setting_difficulty">Difficulty</string>
    <string name="choose_difficulty">Choose difficulty</string>
    <string name="setting_on">ON</string>
    <string name="setting_off">OFF</string>
    <string name="exit_title">Exit</string>
    <string name="exit_message">Are you sure you want to exit game?</string>
    <string name="exit_yes">YES</string>
    <string name="exit_no">NO</string>
</resources>